# python-untis-extended

./: README.md  errors.py  example.py  homework.py  main.py  objects.py  pyproject.toml  schoolsearch.py  session.py  timetable.py
untis_extended/: errors.py  homework.py  main.py  schoolsearch.py  session.py  timetable.py
untis_extended/utils/: apiLogin.py  jwt.py  rpcLogin.py
utils/: apiLogin.py  rpcLogin.py
